Simplify and refactor dcm4che3 migration code
- Remove MIGRATION_NOTES.md (migration complete)
- Remove commented-out jacocoTestReport block from build.gradle
- Remove unused moveDest field and setMoveDest() from Dcm4che3CFindSCU
- Remove setMoveDest() call from CFindSCUSpecificLevel (C-MOVE handled by QrClient)
- Simplify QueryRetrieveLevel using @Getter and List.of()
- Remove unused imports from test and source files

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>