@@ -9,39 +9,39 @@
 
 package org.nrg.xnatx.dqr.dicom.command.dcm4che3;
 
+import lombok.Getter;
 import org.dcm4che3.data.Tag;
 import org.dcm4che3.data.UID;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Query/Retrieve levels for DICOM C-FIND and C-MOVE operations.
- * Replaces org.dcm4che2.tool.dcmqr.DcmQR.QueryRetrieveLevel
  */
+@Getter
 public enum QueryRetrieveLevel {
 
     PATIENT("PATIENT",
             UID.PatientRootQueryRetrieveInformationModelFind,
             UID.PatientRootQueryRetrieveInformationModelMove,
-            Arrays.asList(Tag.PatientID, Tag.PatientName, Tag.PatientBirthDate, Tag.PatientSex)),
+            List.of(Tag.PatientID, Tag.PatientName, Tag.PatientBirthDate, Tag.PatientSex)),
 
     STUDY("STUDY",
             UID.StudyRootQueryRetrieveInformationModelFind,
             UID.StudyRootQueryRetrieveInformationModelMove,
-            Arrays.asList(Tag.StudyInstanceUID, Tag.StudyID, Tag.StudyDate, Tag.StudyTime,
+            List.of(Tag.StudyInstanceUID, Tag.StudyID, Tag.StudyDate, Tag.StudyTime,
                     Tag.AccessionNumber, Tag.PatientID, Tag.PatientName)),
 
     SERIES("SERIES",
             UID.StudyRootQueryRetrieveInformationModelFind,
             UID.StudyRootQueryRetrieveInformationModelMove,
-            Arrays.asList(Tag.SeriesInstanceUID, Tag.SeriesNumber, Tag.Modality,
+            List.of(Tag.SeriesInstanceUID, Tag.SeriesNumber, Tag.Modality,
                     Tag.SeriesDescription, Tag.StudyInstanceUID)),
 
     IMAGE("IMAGE",
             UID.StudyRootQueryRetrieveInformationModelFind,
             UID.StudyRootQueryRetrieveInformationModelMove,
-            Arrays.asList(Tag.SOPInstanceUID, Tag.SOPClassUID, Tag.InstanceNumber,
+            List.of(Tag.SOPInstanceUID, Tag.SOPClassUID, Tag.InstanceNumber,
                     Tag.SeriesInstanceUID));
 
     private final String levelName;
@@ -56,37 +56,6 @@ public enum QueryRetrieveLevel {
         this.defaultReturnKeys = defaultReturnKeys;
     }
 
-    /**
-     * Returns the level name as used in DICOM QueryRetrieveLevel attribute.
-     */
-    public String getLevelName() {
-        return levelName;
-    }
-
-    /**
-     * Returns the SOP Class UID for C-FIND operations at this level.
-     */
-    public String getFindSopClass() {
-        return findSopClass;
-    }
-
-    /**
-     * Returns the SOP Class UID for C-MOVE operations at this level.
-     */
-    public String getMoveSopClass() {
-        return moveSopClass;
-    }
-
-    /**
-     * Returns the default return keys for this query level.
-     */
-    public List<Integer> getDefaultReturnKeys() {
-        return defaultReturnKeys;
-    }
-
-    /**
-     * Parses a level name string to the corresponding enum value.
-     */
     public static QueryRetrieveLevel fromString(String level) {
         for (QueryRetrieveLevel qrl : values()) {
             if (qrl.levelName.equalsIgnoreCase(level)) {
